; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/carlfw/usb/extr_usb.c_usb_ep0rx_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/carlfw/usb/extr_usb.c_usb_ep0rx_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AR9170_USB_EP_CTRL_MAX = common dso_local global i32 0, align 4
@AR9170_USB_REG_EP0_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @usb_ep0rx_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_ep0rx_data(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @AR9170_USB_EP_CTRL_MAX, align 4
  %9 = icmp ugt i32 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @AR9170_USB_EP_CTRL_MAX, align 4
  %14 = icmp ugt i32 %12, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @BUILD_BUG_ON(i32 %15)
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %34, %2
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %4, align 4
  %20 = add i32 %19, 3
  %21 = and i32 %20, -4
  %22 = icmp ult i32 %18, %21
  br i1 %22, label %23, label %37

23:                                               ; preds = %17
  %24 = load i32, i32* @AR9170_USB_REG_EP0_DATA, align 4
  %25 = call i32 @get(i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i8*, i8** %3, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @GET_ARRAY(i8* %26, i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* %5, align 4
  %31 = sub i32 %29, %30
  %32 = call i32 @min(i32 %31, i32 4)
  %33 = call i32 @memcpy(i32 %28, i32* %6, i32 %32)
  br label %34

34:                                               ; preds = %23
  %35 = load i32, i32* %5, align 4
  %36 = add i32 %35, 4
  store i32 %36, i32* %5, align 4
  br label %17

37:                                               ; preds = %17
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @BUILD_BUG_ON(i32) #1

declare dso_local i32 @get(i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @GET_ARRAY(i8*, i32) #1

declare dso_local i32 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
